fix: align the module content in center
If the module is not positioned in one of the center regions, the global
text-align: right is in effect, which distorts the calendar view

--- a/main.css
+++ b/main.css
@@ -15,3 +15,5 @@
 .module.MMM-MonthCalendar .calendar-days div {
     padding: 4px 0;
 }
+
+.module.MMM-MonthCalendar .module-content { text-align: center; }
